src/OpenCvSharpExtern/core_Mat.h

CVAPI(uint64) core_Mat_sizeof()
{
    return sizeof(cv::Mat);
}
CVAPI(ExceptionStatus) core_Mat_new1(cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat;
    });
}
CVAPI(ExceptionStatus) core_Mat_new2(
    int rows,
    int cols,
    int type,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(rows, cols, type); 
    });
}
CVAPI(ExceptionStatus) core_Mat_new3(
    int rows,
    int cols,
    int type,
    interop::Scalar scalar,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(rows, cols, type, cpp(scalar));
    });
}
CVAPI(ExceptionStatus) core_Mat_new4(
    cv::Mat *mat,
    interop::Range rowRange,
    interop::Range colRange,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(*mat, cpp(rowRange), cpp(colRange));
    });
}
CVAPI(ExceptionStatus) core_Mat_new5(
    cv::Mat *mat,
    cv::Range rowRange,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(*mat, rowRange);
    });
}
CVAPI(ExceptionStatus) core_Mat_new6(
    cv::Mat *mat,
    cv::Range *ranges,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(*mat, ranges);
    });
}
CVAPI(ExceptionStatus) core_Mat_new7(
    cv::Mat *mat,
    interop::Rect roi,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(*mat, cpp(roi));
    });
}
CVAPI(ExceptionStatus) core_Mat_new8(
    int rows,
    int cols,
    int type,
    void* data,
    size_t step,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(rows, cols, type, data, step);
    });
}
CVAPI(ExceptionStatus) core_Mat_new9(
    int ndims,
    const int* sizes,
    int type,
    void* data,
    const size_t* steps,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(ndims, sizes, type, data, steps);
    });
}
CVAPI(ExceptionStatus) core_Mat_new10(
    int ndims,
    int* sizes,
    int type,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(ndims, sizes, type);
    });
}
CVAPI(ExceptionStatus) core_Mat_new11(
    int ndims,
    int* sizes,
    int type,
    interop::Scalar s,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(ndims, sizes, type, cpp(s));
    });
}
CVAPI(ExceptionStatus) core_Mat_new12(cv::Mat *mat, cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(*mat);
    });
}
/*CVAPI(ExceptionStatus) core_Mat_release(cv::Mat *self)
{
    return cvTry([&] {
    self->release();
    });
}*/
CVAPI(ExceptionStatus) core_Mat_delete(cv::Mat *self)
{
    return cvTry([&] {
    delete self;
    });
}
CVAPI(ExceptionStatus) core_Mat_getUMat(
    cv::Mat* self,
    cv::AccessFlag accessFlags,
    cv::UMatUsageFlags usageFlags,
    cv::UMat** returnValue)
{
    return cvTry([&] {
        * returnValue = new cv::UMat(self->getUMat(accessFlags, usageFlags));
    });
}
CVAPI(ExceptionStatus) core_Mat_row(
    cv::Mat *self,
    int y,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(self->row(y));
    });
}
CVAPI(ExceptionStatus) core_Mat_col(
    cv::Mat *self,
    int x,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(self->col(x));
    });
}
CVAPI(ExceptionStatus) core_Mat_rowRange(
    cv::Mat *self,
    int startRow,
    int endRow,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(self->rowRange(startRow, endRow));
    });
}
CVAPI(ExceptionStatus) core_Mat_colRange(
    cv::Mat *self,
    int startCol,
    int endCol,
    cv::Mat **returnValue)
{ 
    return cvTry([&] {
    *returnValue = new cv::Mat(self->colRange(startCol, endCol));
    });
}
     
CVAPI(ExceptionStatus) core_Mat_diag(
    cv::Mat *self,
    int d,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    const auto ret = self->diag(d);
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_diag_static(cv::Mat *self, cv::Mat **returnValue)
{
    return cvTry([&] {
    const auto ret = cv::Mat::diag(*self);
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_clone(cv::Mat *self, cv::Mat **returnValue)
{
    return cvTry([&] {
    const auto ret = self->clone();
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_copyTo1(cv::Mat *self, const interop::OutputArrayProxy* m)
{
    return cvTry([&] {
    self->copyTo(OutProxy(*m));
    });
}
CVAPI(ExceptionStatus) core_Mat_copyTo2(
    cv::Mat *self,
    const interop::OutputArrayProxy* m,
    const interop::InputArrayProxy* mask)
{
    return cvTry([&] {
    self->copyTo(OutProxy(*m), InProxy(*mask));
    });
}
CVAPI(ExceptionStatus) core_Mat_copyTo_toMat1(cv::Mat *self, cv::Mat *m)
{
    return cvTry([&] {
    self->copyTo(*m);
    });
}
CVAPI(ExceptionStatus) core_Mat_copyTo_toMat2(
    cv::Mat *self,
    cv::Mat *m,
    const interop::InputArrayProxy* mask)
{
    return cvTry([&] {
    self->copyTo(*m, InProxy(*mask));
    });
}
CVAPI(ExceptionStatus) core_Mat_convertTo(
    cv::Mat *self,
    const interop::OutputArrayProxy* m,
    int rtype,
    double alpha,
    double beta)
{
    return cvTry([&] {
    self->convertTo(OutProxy(*m), rtype, alpha, beta);
    });
}
CVAPI(ExceptionStatus) core_Mat_assignTo(
    cv::Mat *self,
    cv::Mat *m,
    int type)
{
    return cvTry([&] {
    self->assignTo(*m, type);
    });
}
CVAPI(ExceptionStatus) core_Mat_setTo_Scalar(
    cv::Mat *self,
    interop::Scalar value,
    cv::Mat *mask)
{
    return cvTry([&] {
    if (mask == nullptr)
        self->setTo(cpp(value));
    else 
        self->setTo(cpp(value), entity(mask));
    });
}
CVAPI(ExceptionStatus) core_Mat_setTo_InputArray(
    cv::Mat *self,
    const interop::InputArrayProxy* value,
    cv::Mat *mask)
{
    return cvTry([&] {
    self->setTo(InProxy(*value), entity(mask));
    });
}
CVAPI(ExceptionStatus) core_Mat_reshape1(
    cv::Mat *self,
    int cn,
    int rows,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    const auto ret = self->reshape(cn, rows);
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_reshape2(
    cv::Mat *self,
    int cn,
    int newndims,
    const int* newsz,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    const auto ret = self->reshape(cn, newndims, newsz);
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_shape(
    cv::Mat *self,
    int *sizes,
    int *outNdims,
    int *outLayout,
    int *outC,
    int *outEmpty)
{
    return cvTry([&] {
    const cv::MatShape shape = self->shape();
    *outEmpty = shape.empty() ? 1 : 0;
    *outLayout = static_cast<int>(shape.layout);
    *outC = shape.C;
    if (shape.empty())
    {
        *outNdims = -1;
    }
    else
    {
        *outNdims = shape.dims;
        for (int i = 0; i < shape.dims && i < cv::MatShape::MAX_DIMS; i++)
            sizes[i] = shape[i];
    }
    });
}
CVAPI(ExceptionStatus) core_Mat_newFromMatShape(
    int ndims,
    const int *sizes,
    int layout,
    int C,
    int type,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(buildMatShape(ndims, sizes, layout, C), type);
    });
}
CVAPI(ExceptionStatus) core_Mat_newFromMatShapeScalar(
    int ndims,
    const int *sizes,
    int layout,
    int C,
    int type,
    interop::Scalar s,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Mat(buildMatShape(ndims, sizes, layout, C), type, cpp(s));
    });
}
CVAPI(ExceptionStatus) core_Mat_reshapeMatShape(
    cv::Mat *self,
    int cn,
    int ndims,
    const int *sizes,
    int layout,
    int C,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    const auto ret = self->reshape(cn, buildMatShape(ndims, sizes, layout, C));
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_zeros_MatShape(
    int ndims,
    const int *sizes,
    int layout,
    int C,
    int type,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = cv::Mat::zeros(buildMatShape(ndims, sizes, layout, C), type);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_ones_MatShape(
    int ndims,
    const int *sizes,
    int layout,
    int C,
    int type,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = cv::Mat::ones(buildMatShape(ndims, sizes, layout, C), type);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_t(cv::Mat *self, cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = self->t();
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_inv(
    cv::Mat *self,
    int method,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto ret = self->inv(method);
    *returnValue = new cv::MatExpr(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_mul(
    cv::Mat *self,
    const interop::InputArrayProxy* m,
    double scale,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto ret = self->mul(InProxy(*m), scale);
    *returnValue = new cv::MatExpr(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_cross(
    cv::Mat *self,
    const interop::InputArrayProxy* m,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    const auto ret = self->cross(InProxy(*m));
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_dot(
    cv::Mat *self,
    const interop::InputArrayProxy* m,
    double *returnValue)
{
    return cvTry([&] {
    *returnValue = self->dot(InProxy(*m));
    });
}
CVAPI(ExceptionStatus) core_Mat_zeros1(
    int rows,
    int cols,
    int type,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = cv::Mat::zeros(rows, cols, type);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_zeros2(
    int ndims,
    const int *sz,
    int type,
    cv::MatExpr **returnValue) 
{
    return cvTry([&] {
    const auto expr = cv::Mat::zeros(ndims, sz, type);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_ones1(
    int rows,
    int cols,
    int type,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto ret = cv::Mat::ones(rows, cols, type);
    *returnValue = new cv::MatExpr(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_ones2(
    int ndims,
    const int *sz,
    int type,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    auto ret = cv::Mat::ones(ndims, sz, type);
    *returnValue = new cv::MatExpr(ret);
    });
}
CVAPI(ExceptionStatus) core_Mat_eye(
    int rows,
    int cols,
    int type,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto eye = cv::Mat::eye(rows, cols, type);
    *returnValue = new cv::MatExpr(eye);
    });
}
CVAPI(ExceptionStatus) core_Mat_create1(
    cv::Mat *self,
    int rows,
    int cols,
    int type)
{
    return cvTry([&] {
    self->create(rows, cols, type);
    });
}
CVAPI(ExceptionStatus) core_Mat_create2(
    cv::Mat *self,
    int ndims,
    const int *sizes,
    int type)
{
    return cvTry([&] {
    self->create(ndims, sizes, type);
    });
}